// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`error attribution snapshots (Phase 4.1 baseline) A1: single constraint, no compatible tag 1`] = `
"Incompatible version constraints:
  greet-helper requires ^1.0.0

No git tag satisfies all constraints."
`;

exports[`error attribution snapshots (Phase 4.1 baseline) A2: multi-constraint conflict, same repo 1`] = `
"Incompatible version constraints:
  foo requires ^1.0.0
  bar requires ^2.0.0

No git tag satisfies all constraints."
`;

exports[`error attribution snapshots (Phase 4.1 baseline) A2b: three-way constraint conflict 1`] = `
"Incompatible version constraints:
  a requires ^1.0.0
  b requires ^2.0.0
  c requires >=3.0.0

No git tag satisfies all constraints."
`;
